# Neural-Circuit-Breaker

./: .env.example  README.md  docker-compose.yml  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/core/: circuit_breaker.py  config.py  redis_client.py
app/detectors/: base.py  deep_classifier.py  fast_filter.py  patterns.json
app/routing/: fallback_router.py  schemas.py
ncb_sdk/: README.md  __init__.py  client.py  exceptions.py  models.py  pyproject.toml
ncb_sdk/tests/: test_client.py
tests/: conftest.py  test_circuit_breaker.py  test_deep_classifier.py  test_fallback_router.py  test_fast_filter.py  test_integration.py
