[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncb-sdk"
version = "0.1.0"
description = "Python SDK for the Neural Circuit Breaker safety API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
]
